--- a/index.html
+++ b/index.html
@@ -5,16 +5,187 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Google Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
+    <!-- Style Sheet -->
     <link rel="stylesheet" href="Style/Styles.css">
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/d8cb75d8e8.js" crossorigin="anonymous"></script>
     <title>Riyad Hossain Leader-Board</title>
 </head>
 
 <body>
+    <!-- Header Star here -->
+    <header>
+        <div class="header-content">
+            <div class="Header-Logo">
+                <img src="Images/icons/logo.png" alt="">
+                <h2>Idea</h2>
+            </div>
+
+            <div class="Header-Nav-with-profile">
+                <a href="">Home</a>
+                <a href="">About</a>
+                <a href="">Works</a>
+                <img src="Images/icons/profile.png" alt="">
+            </div>
+        </div>
+    </header>
+
+
+    <!-- Main Section Start here -->
+    <main>
+        <section class="top-player-section-and-top-blogs">
+            <div class="top-players">
+                <div class="players top-player-heading">
+                    <h1>Top Player</h1>
+                </div>
+
+                <div class="players">
+                    <img src="images/players/player-1.png" alt="">
+                    <h2>Player 01</h2>
+                </div>
+                <div class="players">
+                    <img src="images/players/player-2.png" alt="">
+                    <h2>Player 02</h2>
+                </div>
+                <div class="players">
+                    <img src="images/players/player-3.png" alt="">
+                    <h2>Player 03</h2>
+                </div>
+                <div class="players">
+                    <img src="images/players/player-4.png" alt="">
+                    <h2>Player 04</h2>
+                </div>
+                <div class="players">
+                    <img src="images/players/player-5.png" alt="">
+                    <h2>Player 05</h2>
+                </div>
+                <div class="players">
+                    <img src="images/players/player-6.png" alt="">
+                    <h2>Player 06</h2>
+                </div>
+                <div class="top-player-heading">
+                    <hr>
+                </div>
+            </div>
 
 
 
 
+            <div class="top-blogs">
+                <div class="top-blogs-heading">
+                    <h1>Top Blog</h1>
+                </div>
 
+                <div class="blogs">
+                    <img src="images/blogs/blog-1.png" alt="">
+                    <div class="blogs-description">
+                        <h1>13 of My Favorite UI/UX Goodies</h1>
+                        <h3> By <a href="">Danny Sapio </a></h3>
+                    </div>
+                </div>
+                <div class="blogs">
+                    <img src="images/blogs/blog-3.png" alt="">
+                    <div class="blogs-description">
+                        <h1>7 typography tips for interface design</h1>
+                        <h3>By <a href="">Jeremiah Lam</a> </h3>
+                    </div>
+                </div>
+                <div class="blogs">
+                    <img src="images/blogs/blog-2.png" alt="">
+                    <div class="blogs-description">
+                        <h1>UI cheat sheet: list vs grids</h1>
+                        <h3>By <a href="">Tess Gadd</a> </h3>
+                    </div>
+                </div>
+                <div class="blogs">
+                    <img src="images/blogs/blog-4.png" alt="">
+                    <div class="blogs-description">
+                        <h1 class="specifiy-padding" style="padding-right: 90px;">Your logo is copied</h1>
+                        <h3>By <a href="">Ferdinand Vogler</a> </h3>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+
+
+        <section class="Latest-Course-section">
+            <h1 class="Latest-Course-section-Heading">Latest Course</h1>
+
+            <div class="All-Courses">
+                <div class="course-box">
+                    <div class="Courses">
+                        <img src="images/courses/course-1.png" alt="">
+                        <h2>React - The Complete Guide 2020</h2>
+                        <a href="">Reed Krakoff</a>
+
+                        <div class="courses-info">
+                            <span class="rating">
+                                <i class="fas fa-star feild"></i>
+                                <i class="fas fa-star feild"></i>
+                                <i class="fas fa-star feild"></i>
+                                <i class="fas fa-star feild"></i>
+                                <i class="fas fa-star empty"></i>
+                            </span>
+                            <span class="rating-number">4.5</span>
+                            <span class="course-duration">
+                                <i class="fas fa-clock"></i> 01:30 hr
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="course-box">
+                    <div class="Courses">
+                        <img src="images/courses/course-1.png" alt="">
+                        <h2>React - The Complete Guide 2020</h2>
+                        <a href="">Reed Krakoff</a>
+
+                        <div class="courses-info">
+                            <span class="rating">
+                                <i class="fas fa-star feild"></i>
+                                <i class="fas fa-star feild"></i>
+                                <i class="fas fa-star feild"></i>
+                                <i class="fas fa-star feild"></i>
+                                <i class="fas fa-star empty"></i>
+                            </span>
+                            <span class="rating-number">4.5</span>
+                            <span class="course-duration">
+                                <i class="fas fa-clock"></i> 01:30 hr
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="course-box">
+                    <div class="Courses">
+                        <img src="images/courses/course-1.png" alt="">
+                        <h2>React - The Complete Guide 2020</h2>
+                        <a href="">Reed Krakoff</a>
+
+                        <div class="courses-info">
+                            <span class="rating">
+                                <i class="fas fa-star feild"></i>
+                                <i class="fas fa-star feild"></i>
+                                <i class="fas fa-star feild"></i>
+                                <i class="fas fa-star feild"></i>
+                                <i class="fas fa-star empty"></i>
+                            </span>
+                            <span class="rating-number">4.5</span>
+                            <span class="course-duration">
+                                <i class="fas fa-clock"></i> 01:30 hr
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
 
 
