--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header>
         <div class="header-content">
             <div class="Header-Logo">
-                <img src="Images/icons/logo.png" alt="">
+                <img src="images/icons/logo.png" alt="">
                 <h2>Idea</h2>
             </div>
 
