--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                 <div class="blogs">
                     <img src="images/blogs/blog-4.png" alt="">
                     <div class="blogs-description">
-                        <h1 class="specifiy-padding" style="padding-right: 90px;">Your logo is copied</h1>
+                        <h1 id="specifiy-padding">Your logo is copied</h1>
                         <h3>By <a href="">Ferdinand Vogler</a> </h3>
                     </div>
                 </div>
