simple profile picture correction

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <a href="">Home</a>
                 <a href="">About</a>
                 <a href="">Works</a>
-                <img src="Images/icons/profile.png" alt="">
+                <img src="images/icons/profile.png" alt="">
             </div>
         </div>
     </header>
